<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_b"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.795"
                app:layout_constraintVertical_bias="0.057" android:id="@+id/textTeamB"
                app:layout_constraintStart_toEndOf="@+id/textTeamA2" android:layout_marginLeft="152dp"
                android:layout_marginStart="152dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_a"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.212"
                app:layout_constraintVertical_bias="0.057" android:id="@+id/textTeamA2"/>
        <TextView
                android:text="@string/_0A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nilaiB" android:textSize="80sp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textTeamB"
                tools:ignore="MissingConstraints"
                app:layout_constraintStart_toStartOf="@+id/textTeamB"
                app:layout_constraintEnd_toEndOf="@+id/textTeamB"/>
        <TextView
                android:text="@string/_0B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nilaiA" android:textSize="80sp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textTeamA2"
                tools:ignore="MissingConstraints"
                app:layout_constraintEnd_toEndOf="@+id/textTeamA2"
                app:layout_constraintStart_toStartOf="@+id/textTeamA2"/>
        <Button
                android:text="@string/_2_points"
                android:layout_width="110dp"
                android:layout_height="38dp"
                android:id="@+id/btnPlus2B" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/btnPlus3B" tools:ignore="MissingConstraints"
                app:layout_constraintStart_toStartOf="@+id/btnPlus3B"
                app:layout_constraintEnd_toEndOf="@+id/btnPlus3B"/>
        <Button
                android:text="@string/free_throw"
                android:layout_width="111dp"
                android:layout_height="39dp"
                android:id="@+id/btnFreethrowB" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/btnPlus2B" tools:ignore="MissingConstraints"
                app:layout_constraintStart_toStartOf="@+id/btnPlus2B"
                app:layout_constraintEnd_toEndOf="@+id/btnPlus2B"/>
        <Button
                android:text="@string/freeThrow"
                android:layout_width="113dp"
                android:layout_height="38dp"
                android:id="@+id/btnFreethrowA2" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/btnPlusA" tools:ignore="MissingConstraints"
                app:layout_constraintStart_toStartOf="@+id/btnPlusA"
                app:layout_constraintEnd_toEndOf="@+id/btnPlusA"/>
        <Button
                android:text="@string/btnPlus2A"
                android:layout_width="110dp"
                android:layout_height="39dp"
                android:id="@+id/btnPlusA" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/btnPlus3A" tools:ignore="MissingConstraints"
                app:layout_constraintStart_toStartOf="@+id/btnPlus3A"
                app:layout_constraintEnd_toEndOf="@+id/btnPlus3A"/>
        <Button
                android:text="@string/btnPlus3B"
                android:layout_width="106dp"
                android:layout_height="41dp"
                android:id="@+id/btnPlus3B" android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/nilaiB" tools:ignore="MissingConstraints"
                app:layout_constraintStart_toStartOf="@+id/nilaiB"
                app:layout_constraintEnd_toEndOf="@+id/nilaiB"/>
        <Button
                android:text="@string/btnPlus3A"
                android:layout_width="107dp"
                android:layout_height="42dp"
                android:id="@+id/btnPlus3A" android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/nilaiA" tools:ignore="MissingConstraints"
                app:layout_constraintStart_toStartOf="@+id/nilaiA"
                app:layout_constraintEnd_toEndOf="@+id/nilaiA"/>
        <Button
                android:text="@string/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="480dp"
                android:id="@+id/btnReset" tools:ignore="MissingConstraints"
                app:layout_constraintEnd_toEndOf="@+id/btnFreethrowB" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="@+id/btnFreethrowA2"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>